# BLD-backend-Request-methods

./: .gitignore.txt  README.md  data.json  db.sqlite3  pyproject.toml  test.py
Scripts/: activate  activate.bat
firstDjango/: data.json  db.sqlite3  pyproject.toml
firstDjango/school/: settings.py  urls.py
firstDjango/student/: admin.py  data.json  models.py  urls.py  views.py
firstDjango/student/migrations/: 0001_initial.py  0002_rename_firstname_student_first_name_and_more.py
school/: settings.py  urls.py
student/: admin.py  middlewares.py  models.py  serializers.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_account_account_this username is taken.py  0003_parent_account.py  0004_tokens.py  0005_tokens_parent.py  0006_rename_tokens_token.py  0007_alter_student_parent.py
