[tool.poetry]
name = "firstdjango"
version = "0.1.0"
description = ""
authors = ["yusuf-74 <yachour31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-json = "^0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
